<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DOSUG Example</string>
    <string name="voteandy">Vote for Andy</string>
    <string name="votebender">Vote for Bender</string>
    <string name="voteandy2">I Vote for Andy</string>
    <string name="votebender2">Vote for Bender</string>
    <string name="results">Results</string>
    <string name="tallyvotes">Tally Votes</string>
</resources>
