<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <ImageView android:src="@drawable/andy"
               android:layout_height="wrap_content"
               android:layout_width="fill_parent"
               android:contentDescription="@string/voteandy"/>
    <Button
            android:id="@+id/andyvotebutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/voteandy2"
            />
    <ImageView android:src="@drawable/bender"
               android:layout_height="wrap_content"
               android:layout_width="fill_parent"
               android:contentDescription="@string/votebender"/>
    <Button
            android:id="@+id/bendervotebutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/votebender2"
            />

    <Button
            android:id="@+id/tallyvotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tallyvotes"
            />

</LinearLayout>